change overflow to hiden and fix page-size

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,7 +15,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     height: 100%;
     margin: 0;
-    // overflow: hidden;
+    overflow: hidden;
 }
 
 a {
@@ -92,8 +92,8 @@ h3 {
 
 .imgBg {
     width: 100% !important;
-    background-position: 0 0;
-    // background-position: center;
+    // background-position: 0 0;
+    background-position: center;
     background-repeat: repeat-y;
     background-size: 100%;
     height: -webkit-fill-available;
@@ -243,7 +243,7 @@ p {
 main {
     flex: 1;
     overflow-y: auto;
-    height: 85vh;
+    height: 100vh;
 }
 
 app-footer {
